# mintmenu-vala

./: meson.build  mintmenu.vala  test
debian/: changelog  control  copyright
files/: meson.build
files/usr/share/dbus-1/services/: org.mate.panel.applet.MintMenuValaAppletFactory.service
files/usr/share/mate-panel/applets/: org.mate.panel.MintMenuValaApplet.mate-panel-applet
